[gd_scene load_steps=23 format=2]

[ext_resource path="res://rooms/final_room.gd" type="Script" id=1]
[ext_resource path="res://entities/GenericRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/ControllablePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/room/finale_room/finale_room.png" type="Texture" id=4]
[ext_resource path="res://graphics/room/finale_room/gradient0003.png" type="Texture" id=5]
[ext_resource path="res://graphics/room/finale_room/gradient0002.png" type="Texture" id=6]
[ext_resource path="res://graphics/room/finale_room/gradient0001.png" type="Texture" id=7]
[ext_resource path="res://graphics/room/finale_room/data0000.png" type="Texture" id=8]
[ext_resource path="res://graphics/room/finale_room/data0001.png" type="Texture" id=9]
[ext_resource path="res://graphics/room/finale_room/machine_light.png" type="Texture" id=10]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 400.789, 249.036, 435, 360, 45, 360, 355.619, 248.319, 214.129, 225.835, 261.127, 225.835, 128.021, 247.217, 77.7984, 252.473 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 3, 2, 6 ), PoolIntArray( 6, 2, 7 ) ]
outlines = [ PoolVector2Array( 45, 360, 77.7984, 252.473, 128.021, 247.217, 214.129, 225.835, 261.127, 225.835, 355.619, 248.319, 400.789, 249.036, 435, 360 ) ]

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D

func _ready():
	pass # Replace with function body.

"

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "data"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "data"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.840896 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "BlinkLights"
length = 0.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "effects_anim_blink"
} ]
}

[sub_resource type="Animation" id=11]
length = 5.6
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.95, 2.35, 3, 3.35, 4.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "activate_terminal"
}, {
"args": [  ],
"method": "activate_terminal"
}, {
"args": [  ],
"method": "activate_terminal"
}, {
"args": [  ],
"method": "activate_terminal"
}, {
"args": [  ],
"method": "activate_terminal"
}, {
"args": [  ],
"method": "activate_terminal"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lights:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Block:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gradient:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "Deactivate"
tracks/0/type = "value"
tracks/0/path = NodePath("Block:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gradient:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lights:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_terminals"
} ]
}

[node name="final_room" type="Node2D"]
script = ExtResource( 1 )

[node name="GenericRoom" parent="." instance=ExtResource( 2 )]
east_door = 4
east_target = "room_b_final_door"
north_door = 1
north_target = ""
west_door = 4
west_target = "room_a_final_door"
south_door = 1
south_target = ""

[node name="ControllablePlayer" parent="GenericRoom" instance=ExtResource( 3 )]
position = Vector2( 130.589, 274.447 )
z_index = 274

[node name="Navigation2D" type="Navigation2D" parent="GenericRoom"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="GenericRoom/Navigation2D"]
navpoly = SubResource( 1 )

[node name="Objects" type="Node2D" parent="GenericRoom"]
__meta__ = {
"_edit_lock_": true
}

[node name="TheMachine" type="Node2D" parent="GenericRoom/Objects"]
position = Vector2( 234.32, 219.98 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="GenericRoom/Objects/TheMachine"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GenericRoom/Objects/TheMachine/Area2D"]
polygon = PoolVector2Array( -157.532, 26.5726, -155.478, -249.093, 165.874, -249.606, 173.574, 28.1126, 90.9261, 16.8191, 22.1382, -1.66129, -24.576, -0.121277, -102.604, 24.0059 )

[node name="Main" type="Sprite" parent="GenericRoom/Objects/TheMachine"]
position = Vector2( -236.55, -241.3 )
texture = ExtResource( 4 )
centered = false

[node name="EffectsOverlay" type="Node2D" parent="."]
z_index = 4000
script = SubResource( 2 )

[node name="Block" type="ColorRect" parent="EffectsOverlay"]
modulate = Color( 0, 0, 0, 0.784314 )
margin_right = 480.0
margin_bottom = 360.0
mouse_filter = 2

[node name="Gradient" type="Sprite" parent="EffectsOverlay"]
editor/display_folded = true
visible = false
texture = ExtResource( 5 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Gradient"]
autoplay = "flicker"
anims/flicker = SubResource( 3 )

[node name="Terminals" type="Node2D" parent="EffectsOverlay"]
editor/display_folded = true

[node name="Terminal" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 148.179, 55.6479 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal"]
anims/data = SubResource( 4 )

[node name="Terminal6" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 331.299, 130.381 )
rotation = 0.0388358
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal6"]
anims/data = SubResource( 5 )

[node name="Terminal4" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 332.478, 50.2598 )
rotation = -0.0571928
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal4"]
anims/data = SubResource( 6 )

[node name="Terminal2" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 116.472, 88.9719 )
rotation = -0.044212
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal2"]
anims/data = SubResource( 7 )

[node name="Terminal3" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 141.384, 120.355 )
rotation = -0.275366
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal3"]
anims/data = SubResource( 8 )

[node name="Terminal5" type="Sprite" parent="EffectsOverlay/Terminals"]
editor/display_folded = true
visible = false
position = Vector2( 355.564, 96.4131 )
rotation = 0.0951845
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Terminals/Terminal5"]
anims/data = SubResource( 9 )

[node name="Lights" type="Node2D" parent="EffectsOverlay"]
editor/display_folded = true
visible = false
position = Vector2( -73.951, 31.2937 )

[node name="machine_light" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.113725, 0.858824, 0.0313726, 1 )
position = Vector2( 278.564, 149.327 )
texture = ExtResource( 10 )

[node name="machine_light2" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.823529, 0.956863, 0.0431373, 1 )
position = Vector2( 278.856, 155.394 )
texture = ExtResource( 10 )

[node name="machine_light3" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.882353, 0.0509804, 0.0509804, 1 )
position = Vector2( 278.783, 160.438 )
texture = ExtResource( 10 )

[node name="machine_light4" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.988235, 0.423529, 0.423529, 1 )
position = Vector2( 337.773, 139.458 )
texture = ExtResource( 10 )

[node name="machine_light5" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.117647, 0.784314, 0.964706, 1 )
position = Vector2( 345.375, 138.947 )
texture = ExtResource( 10 )

[node name="machine_light6" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.988235, 0.431373, 0.835294, 1 )
position = Vector2( 351.808, 138.728 )
texture = ExtResource( 10 )

[node name="machine_light7" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.709804, 1, 0.45098, 1 )
position = Vector2( 338.431, 146.549 )
texture = ExtResource( 10 )

[node name="machine_light8" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 345.521, 146.549 )
texture = ExtResource( 10 )

[node name="machine_light9" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.203922, 0.913725, 0.513726, 1 )
position = Vector2( 352.466, 146.257 )
texture = ExtResource( 10 )

[node name="machine_light10" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.0627451, 0.603922, 1, 1 )
position = Vector2( 338.943, 154.37 )
texture = ExtResource( 10 )

[node name="machine_light15" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.537255, 0.207843, 0.937255, 1 )
position = Vector2( 339.33, 161.15 )
texture = ExtResource( 10 )

[node name="machine_light11" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 1, 0.054902, 0.65098, 1 )
position = Vector2( 345.668, 154.224 )
texture = ExtResource( 10 )

[node name="machine_light13" type="Sprite" parent="EffectsOverlay/Lights"]
position = Vector2( 346.055, 161.004 )
texture = ExtResource( 10 )

[node name="machine_light12" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.152941, 1, 0.164706, 1 )
position = Vector2( 352.246, 154.151 )
texture = ExtResource( 10 )

[node name="machine_light14" type="Sprite" parent="EffectsOverlay/Lights"]
modulate = Color( 0.972549, 0.25098, 0.176471, 1 )
position = Vector2( 352.634, 160.931 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay/Lights"]
autoplay = "BlinkLights"
anims/BlinkLights = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectsOverlay"]
anims/Activate = SubResource( 11 )
anims/Deactivate = SubResource( 12 )
